kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vandalizem
spec:
  selector:
    app: vandalizem
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
